Fix style error that was distorting stamp images

--- a/source/assets/stylesheets/_page.scss
+++ b/source/assets/stylesheets/_page.scss
@@ -104,7 +104,7 @@ table + .references {
     border-bottom: none;
   }
   .stamps img {
-    height: 4rem;
+    max-height: 4rem;
   }
 }
 
